* 2013-07-29 - jan.bauerdick@open-xchange.com

 - Fix for bug 27775: Use new build system to build admin clt packages

* 2013-07-29 - thorben.betten@open-xchange.com

 - Fix for bug 27845: Fixed imports for login counter tool
 - Fix for bug 27640: Ignore delimiting white-space between mail-safe encoded words
 - Fix for bug 27863: Added null guard while composing mail debug information

* 2013-07-26 - marcus.klein@open-xchange.com

 - Fix for bug 26803: Not adding ConcurrentMarkSweepGC options in post install script if ParallelOldGC is configured.

* 2013-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 27706: Deal with UTC time zone set for UTC properties

* 2013-07-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 27722: Introduced various optimizations to speed up batch deletion of many files  

* 2013-07-26 - martin.herfurth@open-xchange.com

 - Fix for bug 27210: Avoid event handling from interrupting user deletion.
 - Fix for bug 26109: Bad exception detection on iTip handling.

* 2013-07-25 - marcus.klein@open-xchange.com

 - Fix for bug 26607: Optimized JMX queries for certain MBeans using object names and removed multi threading.

* 2013-07-25 - thorben.betten@open-xchange.com

 - Fix for bug 27345: Suppress "Shared files" folder if it does not contain user-visible subfolders
 - Fix for bug 27647: Don't consider HTML content containing <img> tags as empty content
 - Fix for bug 26920: Ensure versions are deleted prior to deleting document

* 2013-07-24 - martin.herfurth@open-xchange.com

 - Fix for bug 27591: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT
 - Fix for bug 27584: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT

* 2013-07-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 27747: Bypass com.openexchange.servlet.maxBodySize when uploading / downloading files via drive servlet  
 - Fix for bug 24534: Added import/export of distribution lists in csv-file

* 2013-07-23 - marc.arens@open-xchange.com
